--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>VR Room</title>
-	<script src="//cdn.rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+	<meta name="description" content="Hello, WebVR! - A-Frame">
+    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 
 	<a-scene>
 		<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
